--- a/src/components/Donate/DonatePage.css
+++ b/src/components/Donate/DonatePage.css
@@ -37,6 +37,19 @@
   justify-content: center;
 }
 
+.presetAmt {
+  height: 80px;
+  width: 80px;
+  background-color: lightcyan;
+  
+}
+
+.presetAmounts {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
+}
+
 .heroTitle {
   margin-top: 80px;
 }
@@ -46,6 +59,7 @@
   flex-direction: column;
   width: 50%;
   border: solid green 10px;
+  border-radius: 30px;
   text-align: center;
   padding: 10px;
   gap: 20px;
@@ -66,3 +80,5 @@
   padding: 15px;
   background-color: #13e816;
 }
+
+
