--- a/src/components/PrayerTimes/PrayerTimes.css
+++ b/src/components/PrayerTimes/PrayerTimes.css
@@ -7,7 +7,7 @@
   /* background: white; */
   /* opacity: 0.8; */
   padding: 20px;
-  position: fixed;
+  /* position: fixed; */
   right: 0;
   gap: 5px;
   justify-content: space-between;
