--- a/src/components/PrayerTimes/PrayerTimes.css
+++ b/src/components/PrayerTimes/PrayerTimes.css
@@ -1,17 +1,19 @@
 .prayerBox {
+  position: fixed;
   display: flex;
   flex-direction: column;
-  border: green solid 3px;
+  border: gold solid 3px;
   border-right: 0;
   border-radius: 30px 0px 0px 30px;
-  /* background: white; */
-  /* opacity: 0.8; */
+  margin-top: -100px;
   padding: 20px;
-  position: fixed;
   right: 0;
   gap: 5px;
   justify-content: space-between;
+  align-items: center;
   backdrop-filter: blur(10px);
+  color: white;
+  background: rgba(0, 0, 0, 0.8);
   text-align: center;
 }
 
@@ -20,9 +22,10 @@
 }
 
 .time {
-  color: #13e816;
+  color: gold;
+  font-size: 1.7rem;
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+  /* -webkit-text-stroke-color: black; */
 }
 
 @media screen and (max-width: 960px) {
