--- a/src/components/Donate/DonatePage.css
+++ b/src/components/Donate/DonatePage.css
@@ -5,10 +5,14 @@
   gap: 10px;
   background: url(../../images/donateimage.jpg) center center/ cover no-repeat;
   height: 100%;
+  width: 100%;
   object-fit: contain;
   margin-top: -80px;
   justify-content: center;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.2);
+  
 }
+
 
 @media screen and (max-width: 960px) {
   .donateContainer {
@@ -76,15 +80,15 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  border: solid black 10px;
-  border-radius: 30px;
+  border-radius: 15px;
   text-align: left;
-  padding: 40px;
+  padding: 20px;
   gap: 20px;
   /* backdrop-filter: blur(20px); */
   background: white;
   height: 100%;
   min-height: 100%;
+box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 
@@ -95,12 +99,13 @@
 }
 
 .hadith {
-  border: solid gold 5px;
+  border: solid gold 2px;
   color: white;
   border-radius: 10px;
   padding: 15px;
   background-color: #13e816;
   background-color: black;
+box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
 
 .paypalWrapper {
