--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -56,11 +56,16 @@
   margin-top: 40px;
   display: flex;
   flex-direction: column;
-  border: 5px solid green;
-  border-radius: 40px;
-  background-color: #fff;
+  border: 3px solid gold;
+  border-radius: 20px;
+  background-color: black;
   gap: 10px;
   padding: 20px;
+  color: white;
+}
+
+#arabicTxt {
+  color: gold;
 }
   @media screen and (max-width: 960px) {
   .quoteContainer {
