--- a/src/components/Donate/DonatePage.css
+++ b/src/components/Donate/DonatePage.css
@@ -1,16 +1,19 @@
+.donate {
+  height: 100vh;
+}
+
 .donateContainer {
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 10px;
   background: url(../../images/donateimage.jpg) center center/ cover no-repeat;
-  height: 100%;
   width: 100%;
   object-fit: contain;
   margin-top: -80px;
   justify-content: center;
   box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.2);
-  
+  height: 100%;
 }
 
 .donationBtn {
@@ -133,6 +136,7 @@
 }
 
 .infoBox {
+  margin-top: 40vh;
   display: flex;
   flex-direction: column;
   width: clamp(320px, 90%, 700px);
@@ -141,8 +145,6 @@
   padding: 20px;
   gap: 20px;
   background: white;
-  height: 100%;
-  min-height: 100%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   margin-bottom: 20px;
 }
@@ -166,4 +168,8 @@ box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 
 .donate {
   display: flex;
+}
+
+video {
+  border-radius: 20px;
 }
