--- a/src/components/PrayerTimes/PrayerTimes.css
+++ b/src/components/PrayerTimes/PrayerTimes.css
@@ -7,10 +7,9 @@
   border-radius: 30px 0px 0px 30px;
   margin-top: 50px;
   padding: 20px;
-  right: 0;
   gap: 5px;
   align-self: center;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   backdrop-filter: blur(10px);
   color: white;
@@ -34,6 +33,14 @@
   /* -webkit-text-stroke-color: black; */
 }
 
+
+@media screen and (min-width: 1024px) {
+  .prayerBox {
+    top: 50%;
+    transform: translate(0, -50%);
+    right: 0;
+  }
+}
 @media screen and (max-width: 960px) {
   .prayerBox {
     border: gold solid 3px;
