Updated designs and added new QuickEvents component

--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -19,8 +19,8 @@
 }
 
 .sub-container > h1 {
-  color: #fff;
-  margin-top: 10vh;
+  color: white;
+  text-shadow: 2px 2px 0 black;
   font-size: 100px;
 }
 
@@ -63,6 +63,7 @@
 
 #arabicTxt {
   color: gold;
+  font-size: 10vm;
 }
   @media screen and (max-width: 960px) {
   .quoteContainer {
@@ -83,60 +84,17 @@
   .hero-container {
     display: flex;
   }
-/* From uiverse.io */
-/*.donateBtn {
- position: relative;
- font-size: 17px;
- text-transform: uppercase;
- text-decoration: none;
- padding: 1em 2.5em;
- display: inline-block;
- border-radius: 6em;
- transition: all .2s;
- font-family: inherit;
- font-weight: 500;
- color: gold;
-    background-color: black;
-}
-
-.donateBtn:hover {
- transform: translateY(-3px);
- box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-}
-
-.donateBtn:active {
- transform: translateY(-1px);
- box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.donateBtn::after {
- content: "";
- display: inline-block;
- height: 100%;
- width: 100%;
- border-radius: 100px;
- position: absolute;
- top: 0;
- left: 0;
- z-index: -1;
- transition: all .4s;
-}
-
-.donateBtn::after {
- background-color: black;
-}
-
-.donateBtn:hover::after {
- transform: scaleX(1.4) scaleY(1.6);
- opacity: 0;
-}*/
 
 .sub-container {
-    border-radius: 25px;
-    background-color: black;
-    padding: 30px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  border-radius: 25px;
+  background-color: black;
+  padding: 30px;
+  box-shadow: 0 10px 20px black, 0 6px 6px black;
+  border: 2px solid white;
+  margin-top: 12vh;
 }
+
+
 
 .donateBtn {
   margin-top: 10px;
@@ -153,7 +111,7 @@ border-radius: 40px;
 padding: 12px;
 font-size: 30px;
 font-weight: 400;
-box-shadow: rgb(255, 198, 0) -2px -2px 0px 2px, rgb(246, 84, 174) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
+box-shadow: rgb(255, 198, 0) -2px -2px 0px 2px, rgb(250, 250, 22) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
 transition: all 0.2s;
 }
 
