--- a/src/components/Donate/DonatePage.css
+++ b/src/components/Donate/DonatePage.css
@@ -157,11 +157,11 @@
 
 
 .hadith {
+  font-size: 10vm;
   border: solid gold 2px;
   color: white;
   border-radius: 10px;
   padding: 15px;
-  background-color: #13e816;
   background-color: black;
 box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
