--- a/src/components/image.css
+++ b/src/components/image.css
@@ -6,25 +6,16 @@
 .image-grid {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(50px, auto);
   margin: 0 auto;
   width: 100%;
   max-width: 1000px;
   padding: 0 32px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(250px, 1fr);
 }
 
-.image-item {
-}
 
-/* .image-item:nth-child(5) { */
-/*   grid-column-end: span 2; */
-/* } */
-/*  */
-/* .image-item:nth-child(9) { */
-/*   grid-row-start: 4; */
-/*   grid-column-end: span 2; */
-/* } */
 
 .image-grid img:hover {
   transform: scale(1.1);
