--- a/src/components/BlogList/BlogList.css
+++ b/src/components/BlogList/BlogList.css
@@ -1,3 +1,4 @@
+
 .container {
     width: 80%;
     margin: 0 auto;
@@ -15,13 +16,14 @@
 
 .blog-list__item {
     margin: 5px;
-    max-width: 800px;
+    max-width: 400px;
     align-self: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #f8f8f8;
+    border-radius: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -29,7 +31,7 @@
     font-size: 24px;
     margin-bottom: 0;
     padding: 10px;
-    background-color: #009688;
+    background-color: black;
     color: #fff;
     width: 100%;
     border-radius: 0 0 20px 20px ;
@@ -44,6 +46,7 @@
 
 .blog-list__image {
     display: flex;
+    flex-direction: column;
     width: 100%;
     position: relative;
     align-items: center;
@@ -62,4 +65,14 @@
 .links {
     text-decoration: none;
     color: inherit;
+}
+
+.heroTitle {
+    color: black;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+    margin: 0;
+    padding: 10px;
 }
