--- a/src/components/Donate/DonatePage.css
+++ b/src/components/Donate/DonatePage.css
@@ -134,7 +134,8 @@
 .donateTitle {
   margin-top: 10vh;
   color: white;
-  font-size: 8vw;
+  font-size: 8vh;
+  padding-top: 10px;
 }
 
 .donateContainer > h2 {
