--- a/src/components/BlogList/BlogList.css
+++ b/src/components/BlogList/BlogList.css
@@ -1,22 +1,30 @@
-
 .container {
-    width: 80%;
+    background: url(../../images/Background.jpg) center center/cover no-repeat fixed;
+    width: 100%;
+    justify-content: center;
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.2);
+    margin-top: -80px;
+    padding-top: 10vh;
+}
+
+.blogContainer {
+    width: 90%;
     margin: 0 auto;
     align-items: center;
 }
 
 .blog-list {
     align-items: center;
-    justify-self: center;
+    justify-content: center; /* Changed from justify-self to justify-content */
     display: grid;
     align-self: center;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1rem;
 }
 
 .blog-list__item {
     margin: 5px;
-    max-width: 400px;
+    max-width: 300px;
     align-self: center;
     display: flex;
     flex-direction: column;
@@ -24,6 +32,7 @@
     align-items: center;
     background-color: #f8f8f8;
     border-radius: 20px;
+    border: grey solid 2px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -32,7 +41,7 @@
     margin-bottom: 0;
     padding: 10px;
     background-color: black;
-    color: #fff;
+    color: white;
     width: 100%;
     border-radius: 0 0 20px 20px ;
     text-align: center;
@@ -52,8 +61,8 @@
     align-items: center;
     justify-content: center;
     border-radius: 20px 20px 0 0;
-    overflow: hidden; /* Add this line to hide any image overflow */
-    box-sizing: border-box; /* Add this line */
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 .image {
@@ -68,11 +77,30 @@
 }
 
 .heroTitle {
-    color: black;
+    color: white;
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-size: 2rem;
-    margin: 0;
+    font-size: 2em;
     padding: 10px;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .blogContainer {
+        width: 100%;
+    }
+
+    .blog-list {
+        grid-template-columns: 1fr; /* Changed to 1fr from 300px */
+        justify-items: center; /* Add this line */
+    }
+
+    .blog-list__item {
+        max-width: 100%;
+    }
+
+    .heroTitle {
+        font-size: 1.5rem;
+    }
 }
